--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,12 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --bg-image: url("../images/cover-image-dark.png");
+  --text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --title-color: #db00ff;
+  --menu-button-active: #ff0070;
+  --menu-button-hover: rgba(255, 0, 112, 0.4);
+  --menu-button-focus: #ff0070;
+  --decor-color: #ff0070;
+  --text-accent-color: #000028;
 }
