--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,13 @@ a {
   font-size: inherit;
   line-height: inherit;
 }
+
+a:focus,
+button:focus {
+  outline: none;
+}
+
+a:focus-visible,
+button:focus-visible {
+  outline: 1px solid currentColor;
+}
