--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,16 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #fff1f7;
+  --bg-image: url("../images/cover-image-light.png");
+  --text-color: #353430;
+  --accent-color: #ff8dcb;
+  --title-color: #ffc2e6;
+  --menu-button-active: #353430;
+  --menu-button-hover: rgba(50, 49, 45, 0.4);
+  --menu-button-focus: #353430;
+  --decor-color: #353430;
+  --text-accent-color: #353430;
+}
+
+.theme-light .header__rec {
+  display: none;
 }
