--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,27 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --bg-color: #000028;
+  --bg-image: url("../images/cover-image-dark.png");
+  --text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --title-color: #db00ff;
+  --menu-button-active: #ff0070;
+  --menu-button-hover: rgba(255, 0, 112, 0.4);
+  --menu-button-focus: #ff0070;
+  --decor-color: #ff0070;
+  --text-accent-color: #000028;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #fff1f7;
+    --bg-image: url("../images/cover-image-light.png");
+    --text-color: #353430;
+    --accent-color: #ff8dcb;
+    --title-color: #ffc2e6;
+    --menu-button-active: #353430;
+    --menu-button-hover: rgba(50, 49, 45, 0.4);
+    --menu-button-focus: #353430;
+    --decor-color: #353430;
+    --text-accent-color: #353430;
+  }
+}
