--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,25 @@
   --menu-button-focus: #353430;
   --decor-color: #353430;
   --text-accent-color: #353430;
+  --accept-color: #353430;
 }
 
 .theme-light .header__rec {
   display: none;
+}
+
+.theme-light .header__theme-menu-button {
+  color: var(--text-color);
+}
+
+.theme-light .header__theme-menu-button_active {
+  border-color: var(--text-color);
+}
+
+.theme-light .header__theme-menu-button:hover {
+  border-color: var(--menu-button-hover);
+}
+
+.theme-light .header__theme-menu-button:focus-visible {
+  border-bottom-color: var(--text-color);
 }
