--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 .page {
   background-color: var(--bg-color);
-  background-image: var(--bg-image);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -15,6 +14,7 @@
 }
 
 .header {
+  background-image: var(--bg-image);
   position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
@@ -118,6 +118,9 @@
 .section {
   margin-bottom: 40px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .section--compact {
@@ -187,7 +190,6 @@
   line-height: 1.3;
   margin: 0;
   font-size: 18px;
-  padding-top: 8px;
 }
 
 .card__title--regular {
@@ -287,7 +289,6 @@
   margin-bottom: 0;
 }
 
-/* Уменьшаем отступы в секции с советами без отрицательных значений */
 .section--tips {
   margin-bottom: 20px;
 }
@@ -512,7 +513,6 @@
     left: 0;
   }
   
-  /* Адаптация для планшетов - советы */
   .section--tips {
     margin-bottom: 30px;
   }
@@ -554,7 +554,8 @@
   
   .header__text {
     width: 490px;
-    margin-bottom: 0px;
+    margin-bottom: 18px;
+    padding: 0 0 0 0;
     max-height: 93px;
   }
   
@@ -563,7 +564,7 @@
   }
   
   .section {
-    margin-bottom: 106px;
+    margin-bottom: 78px;
     padding: 0px 0;
   }
   
@@ -582,7 +583,7 @@
   }
   
   .section:nth-child(1) .card {
-    padding-top: 12px;
+    padding-top: 6px;
   }
   
   .section:nth-child(1) .card__title {
@@ -603,7 +604,7 @@
   }
   
   .section:nth-child(2) .card__title {
-    padding: 2px 10px;
+    padding: 2px 0px;
     margin-bottom: 0;
   }
   
@@ -626,8 +627,8 @@
   
   .section--tips .tips-header__subtitle {
       height: 23px;
-      padding: 4px 0px;
-      margin-top: 6px;
+      padding: 0px 0px;
+      margin-top: 2px;
   }
   
   .section--tips .section__main-content {
@@ -698,7 +699,7 @@
   
   .footer__title {
     font-size: clamp(9.5rem, -0.4375rem + 14.4531vw, 9.8125rem);
-    margin-top: 87px;
+    margin-top: 104px;
   }
   
   .decorated-zone::before {
@@ -711,7 +712,6 @@
     left: 20px;
   }
   
-  /* Адаптация для десктопа - советы */
   .section--tips {
     margin-bottom: 40px;
   }
